Fix left spacing at mobile

--- a/src/styles/components/_Header.scss
+++ b/src/styles/components/_Header.scss
@@ -118,7 +118,7 @@ Homepage header
   // On small screens, the logo padding was creating a wonky focus style
   .hc-c-header {
     .hc-c-logo-link {
-      margin-left: 8px;
+      margin-left: 16px;
       padding-left: 0;
       padding-right: 8px;
     }
